# tek

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.txt  run_tests.py
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: main.cpp
src/excepetions/: Exceptions.cpp  Exceptions.hpp
src/exceptions/: Exceptions.cpp  Exceptions.hpp
src/interpreter/: Environment.cpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp  Resolver.cpp  Resolver.hpp
src/logger/: Logger.cpp  Logger.hpp
src/parser/: AstPrinter.cpp  AstPrinter.hpp  Expressions.cpp  Expressions.hpp  Parser.cpp  Parser.hpp  Statements.cpp  Statements.hpp
src/tokenizer/: Token.cpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp
src/types/: Callable.cpp  Callable.hpp  Literal.cpp  Literal.hpp
src/utils/: fs.cpp  fs.hpp  guard.hpp  iterable_stack.hpp  traits.hpp  variants.hpp
tests/: run_examples.py  unexpected_character.tek
tests/assignment/: associativity.tek  global.tek  grouping.tek  infix_operator.tek  local.tek  prefix_operator.tek  syntax.tek  undefined.tek
tests/ast/: AstPrinter_test.cpp  Parser_test.cpp
tests/comments/: comment.tek  line_at_eof.tek  only_line_comment_and_line.tek  unicode.tek
tests/examples/: fibonacci.tek
tests/expressions/: evaluate.tek
tests/for/: scope.tek  statement_condition.tek  statement_increment.tek  statement_initializer.tek  var_in_body.tek
tests/functions/: closures.tek  functions.tek  recursive_fib.tek
tests/if/: dangling_else.tek  else.tek  if.tek  truth.tek  var_in_else.tek  var_in_then.tek
tests/logical_operator/: and.tek  and_truth.tek  or.tek  or_truth.tek
tests/nil/: literal.tek
tests/number/: decimal_point_at_eof.tek  leading_dot.tek  literals.tek  nan_equality.tek  trailing_dot.tek
tests/operator/: add.tek  add_bool_nil.tek  add_bool_num.tek  add_bool_string.tek  add_nil_nil.tek  add_num_nil.tek  add_string_nil.tek  comparison.tek  divide.tek  divide_nonnum_num.tek  divide_num_nonnum.tek  equals.tek  greater_nonnum_num.tek  greater_num_nonnum.tek  greater_or_equal_nonnum_num.tek  greater_or_equal_num_nonnum.tek  less_nonnum_num.tek  less_num_nonnum.tek  less_or_equal_nonnum_num.tek  less_or_equal_num_nonnum.tek  multiply.tek  multiply_nonnum_num.tek  multiply_num_nonnum.tek  negate.tek  negate_nonnum.tek  not_equals.tek  subtract.tek  subtract_nonnum_num.tek  subtract_num_nonnum.tek
tests/precedence/: precedence.tek
tests/print/: missing_argument.tek
tests/string/: error_after_multiline.tek  literals.tek  multiline.tek  unterminated.tek
tests/while/: syntax.tek  (+1 more)
(+25 files in other folders)
